@@ -259,7 +259,7 @@ class WFAuthorizationManager extends WFObject
     const SESSION_KEY_AUTHORIZATION_INFO = 'authorizationInfo';
     const SESSION_KEY_RECENT_LOGIN_TIME = 'recentLoginTime';
 
-    const VERSION = 1.0;
+    const VERSION = 1.1;
     const RECENT_LOGIN_SECS = 900; // 15 minutes
 
     const ALLOW = 1;
@@ -273,12 +273,17 @@ class WFAuthorizationManager extends WFObject
       * @var object WFAuthorizationDelegate The delegate object for handling authorization-related things.
       */
     protected $authorizationDelegate;
+    /**
+     * @var string The class name to use as the {@link WFAuthorizationManager::$authorizationInfo}. Defaults to {@link WFAuthorizationInfo}.
+     */
+    protected $authorizationInfoClass;
 
     function __construct()
     {
         parent::__construct();
 
-        $this->authorizationInfo = new WFAuthorizationInfo;
+        $this->authorizationInfoClass = WFWebApplication::sharedWebApplication()->authorizationInfoClass();
+        $this->authorizationInfo = NULL;
         $this->authorizationDelegate = NULL;
 
         // is session authorization info initialized?
@@ -311,7 +316,7 @@ class WFAuthorizationManager extends WFObject
     {
         $_SESSION[WFAuthorizationManager::SESSION_NAMESPACE][WFAuthorizationManager::SESSION_KEY_VERSION] = WFAuthorizationManager::VERSION;
         $_SESSION[WFAuthorizationManager::SESSION_NAMESPACE][WFAuthorizationManager::SESSION_KEY_LOGGED_IN] = false;
-        $this->authorizationInfo = $_SESSION[WFAuthorizationManager::SESSION_NAMESPACE][WFAuthorizationManager::SESSION_KEY_AUTHORIZATION_INFO] = new WFAuthorizationInfo();
+        $this->authorizationInfo = $_SESSION[WFAuthorizationManager::SESSION_NAMESPACE][WFAuthorizationManager::SESSION_KEY_AUTHORIZATION_INFO] = new $this->authorizationInfoClass();
         $_SESSION[WFAuthorizationManager::SESSION_NAMESPACE][WFAuthorizationManager::SESSION_KEY_RECENT_LOGIN_TIME] = 0;
     }
 
